// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/SeparatorLine Colors 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <div
    className="container-separator color-base"
  >
    <hr
      className="separator-line color-base size-sm"
      title="separator"
    />
  </div>
  <div
    className="container-separator color-primary"
  >
    <hr
      className="separator-line color-primary size-sm"
      title="separator"
    />
  </div>
  <div
    className="container-separator color-secondary"
  >
    <hr
      className="separator-line color-secondary size-sm"
      title="separator"
    />
  </div>
  <div
    className="container-separator color-tertiary"
  >
    <hr
      className="separator-line color-tertiary size-sm"
      title="separator"
    />
  </div>
  <div
    className="container-separator color-inverted"
  >
    <hr
      className="separator-line color-inverted size-sm"
      title="separator"
    />
  </div>
</div>
`;

exports[`Storyshots Atoms/SeparatorLine Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <div
    className="container-separator color-primary"
  >
    <hr
      className="separator-line color-primary size-sm"
      title="separator"
    />
  </div>
</div>
`;

exports[`Storyshots Atoms/SeparatorLine Size 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <div
    className="container-separator color-primary"
  >
    <hr
      className="separator-line color-primary size-xs"
      title="separator"
    />
  </div>
  <div
    className="container-separator color-primary"
  >
    <hr
      className="separator-line color-primary size-sm"
      title="separator"
    />
  </div>
  <div
    className="container-separator color-primary"
  >
    <hr
      className="separator-line color-primary size-md"
      title="separator"
    />
  </div>
  <div
    className="container-separator color-primary"
  >
    <hr
      className="separator-line color-primary size-lg"
      title="separator"
    />
  </div>
</div>
`;

exports[`Storyshots Atoms/SeparatorLine Titel Colors 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <div
    className="container-separator color-base"
  >
    <hr
      className="separator-line color-base size-sm"
      title="separator"
    />
    <div
      className="title"
    >
      <h4
        className="container color-base"
      >
        separator
      </h4>
    </div>
  </div>
  <div
    className="container-separator color-primary"
  >
    <hr
      className="separator-line color-primary size-sm"
      title="separator"
    />
    <div
      className="title"
    >
      <h4
        className="container color-primary"
      >
        separator
      </h4>
    </div>
  </div>
  <div
    className="container-separator color-secondary"
  >
    <hr
      className="separator-line color-secondary size-sm"
      title="separator"
    />
    <div
      className="title"
    >
      <h4
        className="container color-secondary"
      >
        separator
      </h4>
    </div>
  </div>
  <div
    className="container-separator color-tertiary"
  >
    <hr
      className="separator-line color-tertiary size-sm"
      title="separator"
    />
    <div
      className="title"
    >
      <h4
        className="container color-tertiary"
      >
        separator
      </h4>
    </div>
  </div>
  <div
    className="container-separator color-inverted"
  >
    <hr
      className="separator-line color-inverted size-sm"
      title="separator"
    />
    <div
      className="title"
    >
      <h4
        className="container color-inverted"
      >
        separator
      </h4>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/SeparatorLine Titel Sizes 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <div
    className="container-separator color-primary"
  >
    <hr
      className="separator-line color-primary size-xs"
      title="separator"
    />
    <div
      className="title"
    >
      <h4
        className="container color-primary"
      >
        separator
      </h4>
    </div>
  </div>
  <div
    className="container-separator color-primary"
  >
    <hr
      className="separator-line color-primary size-sm"
      title="separator"
    />
    <div
      className="title"
    >
      <h4
        className="container color-primary"
      >
        separator
      </h4>
    </div>
  </div>
  <div
    className="container-separator color-primary"
  >
    <hr
      className="separator-line color-primary size-md"
      title="separator"
    />
    <div
      className="title"
    >
      <h4
        className="container color-primary"
      >
        separator
      </h4>
    </div>
  </div>
  <div
    className="container-separator color-primary"
  >
    <hr
      className="separator-line color-primary size-lg"
      title="separator"
    />
    <div
      className="title"
    >
      <h4
        className="container color-primary"
      >
        separator
      </h4>
    </div>
  </div>
</div>
`;
